# eval

./: .gitignore  AGENT.md  AGENTS.md  AMB.md  ARROW.md  ASYNC.md  BINARY.md  CATEGORY.md  CMakeLists.txt  CONCURRENT.md  DECIMALSANDDATES.md  DICTS.md  DIFFERENTIAL.md  FILESYS.md  FSTRINGS.md  GENERATORS.md  GRAMMARS.md  GREEN_THREADS.md  INDEXING.md  INTRO.md  LICENSE  LISTS.md  MANIFEST.in  MULTITHREADING.md  Makefile  NETWORKING.md  PROLOG.md  REACTIVE.md  README.md  RETE.md  STRINGS.md  TASKS.md  TESTS.md  THIRD-PARTY-NOTICES  THIRD_PARTY_LICENSES  THREADS.md  UNITS.md  VECTORS.md  pyproject.toml  vcpkg-configuration.json  (+1 more)
.github/workflows/: standalone.yml  test.yml  wheels.yml
chibi-scheme/: eval.c  gc.c  sexp.c  vm.c
chibi-scheme/include/chibi/: sexp.h
chibi-scheme/lib/chibi/: accept.c  ast.c  disasm.c  heap-stats.c  json.c  signal.c  weak.c
chibi-scheme/lib/chibi/optimize/: profile.c  rest.c
chibi-scheme/lib/chibi/snow/: commands.scm
chibi-scheme/lib/eval/: ad.scm  aliases.scm  amb.scm  arrow-oo.scm  async.scm  base.scm  capnp-rt.scm  collection-oo.scm  datetime-oo.scm  decimal-oo.scm  dict.scm  generator.scm  grammar-rt.scm  logic.scm  monad.scm  money-oo.scm  quantity-oo.scm  reactive.scm  string-oo.scm  threads.scm  units-defs.scm
chibi-scheme/lib/scheme/: test.scm  time.c
chibi-scheme/lib/srfi/151/: bit.c
chibi-scheme/lib/srfi/160/: base.scm
chibi-scheme/lib/srfi/18/: threads.c
chibi-scheme/lib/srfi/27/: rand.c
chibi-scheme/lib/srfi/39/: param.c
chibi-scheme/lib/srfi/69/: hash.c
chibi-scheme/lib/srfi/95/: qsort.c
chibi-scheme/lib/srfi/98/: env.c
chibi_eval/: __init__.py
chibi_eval/lib/: concurrent.eval  net-oo.eval  sync.eval  taskpool.eval  threadpool.eval
examples/: file_processor.eval  http_client.eval  http_server.eval
examples/bank/: account.eval  bank.eval  test_bank.py
examples/green_threads/: green_threads_demo.eval  run_demo.py  run_showcase.py  scheduler.eval  showcase.eval  test_green_threads.py
examples/objects/: test_object_model.py
examples/oop/: canvas.eval  main.eval  shape.eval  test_dict.eval  test_record.eval  transform.eval  vec2.eval
src/: _capnp_bridge.cpp  _chibi_bridge.c  _chibi_bridge.h  _chibi_context.c  _chibi_convert.c  _chibi_convert.h  _chibi_module.c  _chibi_pyobject_type.c  _chibi_pyobject_type.h  _chibi_serialize.c  _chibi_serialize.h  _chibi_sexp.c  _chibi_win_compat.h  _eval_ad.c  _eval_ad.h  _eval_arrow.cpp  _eval_concurrent.c  _eval_concurrent.h  _eval_datetime.c  _eval_decimal.c  _eval_grammar_bridge.c  _eval_jit.cpp  _eval_jit.h  _eval_lemon_lib.c  _eval_lemon_lib.h  _eval_lexer.c  _eval_lexer.h  _eval_lib_init.c  _eval_parser_helpers.c  _eval_parser_helpers.h  _eval_pool.c  _eval_pool.h  _eval_quantity.c  _eval_re2c_lib.cpp  _eval_re2c_lib.h  _eval_rete.c  _eval_rete.h  _eval_stub_libs.c  _eval_tf.c  _eval_thread.h  (+19 more)
src/win_compat/: netdb.h  poll.h  unistd.h
src/win_compat/arpa/: inet.h
src/win_compat/netinet/: in.h
src/win_compat/sys/: socket.h  time.h
tests/: conftest.py  smoke_libs.py  test_continuation_serialize.py  test_eval.py  test_eval_files.py  test_missing_funcs.py  test_pool.py  test_scm2eval.py  test_sicp.py
tests/eval/: test_abstract.eval  test_amb.eval  test_arithmetic.eval  test_arrow.eval  test_arrow_parallel.eval  test_async.eval  test_bisect.eval  test_bitwise.eval  test_blocks_scope.eval  test_capnp.eval  test_capnp_mmap.eval  test_collection_oo.eval  test_comparison_logic.eval  test_comprehension.eval  test_concurrent.eval  test_continuations.eval  test_control_flow.eval  test_dict.eval  test_error_handling.eval  test_functions.eval  test_generator.eval  test_grammar.eval  test_green_threads.eval  test_higher_order.eval  test_http.eval  test_indexing.eval  test_let_bindings.eval  test_libraries.eval  test_literals.eval  test_logic.eval  test_loops.eval  test_macros.eval  test_misc.eval  test_nb.eval  test_numeric_tower.eval  test_oop.eval  test_operators_as_values.eval  test_pool.eval  test_pool_continuations.eval  test_pool_green_threads.eval  (+12 more)
tools/: generate_embedded.cmake  generate_lempar_embedded.cmake  scm2eval.py
